%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.6-2 (2023-10-02 r4414)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item Methods for generic functions \code{rbind2}, \code{cbind2},
      \code{\%*\%}, \code{\%&\%}, \code{crossprod}, and \code{tcrossprod}
      determine the class of the result using more strict rules,
      designed to avoid \dQuote{surprising} coercions where possible.
      Notably, operations involving \code{RsparseMatrix} now return
      an \code{RsparseMatrix} in more cases.  \code{TsparseMatrix} and
      \code{diagonalMatrix} may be handled as \code{CsparseMatrix} or as
      \code{RsparseMatrix}, depending on context.
    }
  }
  \subsection{New Features}{
    \itemize{
      %% TODO {for 1.6-3}: Ops using (x@x | is.na(x@x)) for ndiMatrix 'x'
      \item New nonvirtual class \code{ndiMatrix}, extending virtual
      classes \code{diagonalMatrix} and \code{nMatrix}, for nonzero
      pattern diagonal matrices.  It is used to represent the result
      of \code{is.na}, \code{is.nan}, \code{is.infinite} applied to
      \code{diagonalMatrix}, as well as diagonal boolean products.
      Coercions \code{as(<diagonalMatrix>, "nMatrix")} now give
      \code{ndiMatrix} instead of \code{ntCMatrix}.  The latter can
      for now still be obtained by coercing to \code{nsparseMatrix}
      instead of \code{nMatrix}.

      \item New C-level validity methods for \code{sparseVector} and
      \code{[nlidz]sparseVector}, now requiring \code{length} not
      exceeding \code{2^53}, which on most platforms is the maximum
      integer representable exactly as \code{double}.

      \item \code{mean(<sparseVector>, trim=)} now works efficiently
      for nonzero values of \code{trim}.
